# GameTrainer

./: . dockerignore  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  gtest.cmake  project.h  unit_tests.cpp
.ci/: .coveralls.yml  appveyor.yml  install-testing-deps.bat  install.bat  set-env.bat  zip.bat
.ci/docker/: env.Dockerfile  tests.Dockerfile
.github/workflows/: build-windows.yml
.msvs2019/: GameTrainer.sln  GameTrainer.vcxproj  GameTrainer.vcxproj.filters
app/: CMakeLists.txt
app/data/cheat-tables/: DeadIsland.CT  DeadIslandRiptide.CT  KillingFloor.CT  KillingFloor2.CT  Left4Dead2.CT
app/data/scripts/: KillingFloor.lua
app/data/scripts/shared/: key-codes.lua
app/executable/: CMakeLists.txt
app/executable/console/: CMakeLists.txt
app/executable/console/src/: main.cpp
app/inc/: game.hpp  trainer.hpp
app/lib/: CMakeLists.txt
app/lib/gt_core/: CMakeLists.txt
app/lib/gt_core/inc/: game.hpp  trainer.hpp
app/lib/gt_core/inc/gt_core/: game.hpp  trainer.hpp
app/lib/gt_core/src/: game.cpp  trainer.cpp
app/lib/gt_lua/: CMakeLists.txt
app/lib/gt_lua/inc/: state-pusher.hpp  value-reader.hpp  wrapper.hpp
app/lib/gt_lua/inc/gt_lua/: error-handler.hpp  stack-cleaner.hpp  state-pusher.hpp  value-reader.hpp  wrapper.hpp
app/lib/gt_lua/src/: error-handler.cpp  wrapper.cpp
app/lib/gt_os/: CMakeLists.txt
app/lib/gt_os/implementations/windows/: CMakeLists.txt
app/lib/gt_os/implementations/windows/inc/: keyboard-watcher.hpp  utils.hpp
app/lib/gt_os/implementations/windows/src/: keyboard-watcher.cpp  utils.cpp  window-manager.cpp
app/lib/gt_os/inc/gt_os/: api-definitions.hpp  keyboard-watcher.hpp  os-api.hpp  os-definitions.hpp  os-tlhelp.hpp  utils.hpp  window-enumerator.hpp  window-enumerator.i.hpp  window-finder.hpp  window-finder.i.hpp  window-manager.hpp
app/lib/gt_os/src/: keyboard-watcher.cpp  utils.cpp  window-enumerator.cpp  window-finder.cpp  window-manager.cpp
app/lib/gt_xml/: CMakeLists.txt
app/lib/gt_xml/inc/: table-mediator.hpp  table-reader.hpp
app/lib/gt_xml/inc/gt_xml/: cheat-entry.hpp  table-mediator.hpp  table-reader.hpp
app/lib/gt_xml/inc/gt_xml/setters/: address-setter.hpp  description-setter.hpp  offsets-setter.hpp  table-setter.hpp  variable-type-setter.hpp
app/lib/gt_xml/inc/setters/: address-setter.hpp  description-setter.hpp  offsets-setter.hpp  table-setter.hpp  variable-type-setter.hpp
app/lib/gt_xml/src/: table-mediator.cpp  table-reader.cpp
app/lib/gt_xml/src/setters/: address-setter.cpp  description-setter.cpp  offsets-setter.cpp  table-setter.cpp  variable-type-setter.cpp
app/resources/data/cheat-tables/: KillingFloor.CT  Left4Dead2.CT  kf2_ONE_HIT_KILL.asm
app/resources/data/scripts/: KillingFloor.lua
app/resources/data/scripts/shared/: api.lua  key-codes.lua
app/src/: game.cpp  main.cpp  trainer.cpp
data/: key_codes.lua  script.lua
data/scripts/: KillingFloor.lua
docs/: 1.txt
inc/: gg.h  gg.hpp
include/: Config.h  Game.h  Trainer.h  resource.h
msvs2015/: GameTrainer.rc  GameTrainer.sln  GameTrainer.vcxproj  GameTrainer.vcxproj.filters  RCa03832  RCc03832  settings.ini
msvs2015/Games/: DeadIsland.CT  DeadIslandRiptide.CT  KillingFloor.CT  KillingFloor2.CT  Left4Dead2.CT
mylib/: CMakeLists.txt
mylib/inc/: config.hpp
mylib/inc/public/: config.hpp  gg.hpp  keyboard-watcher.hpp  lua-stack-cleaner.hpp  lua-status.hpp  lua-wrapper.hpp  win-utils.hpp  window-manager.hpp
mylib/inc/public/lua/: error-handler.hpp  stack-cleaner.hpp  state-pusher.hpp  value-reader.hpp  wrapper.hpp
mylib/inc/public/windows/: keyboard-watcher.hpp  utils.hpp  window-manager.hpp
mylib/inc/public/xml/: cheat-entry.hpp  table-mediator.hpp  table-reader.hpp
mylib/inc/public/xml/setters/: address-setter.hpp  description-setter.hpp  offsets-setter.hpp  table-setter.hpp  variable-type-setter.hpp
mylib/src/: config.cpp  gg.cpp  keyboard-watcher.cpp  lua-wrapper.cpp  win-utils.cpp  window-manager.cpp
mylib/src/lua/: error-handler.cpp  wrapper.cpp
mylib/src/windows/: keyboard-watcher.cpp  utils.cpp  window-manager.cpp
mylib/src/xml/: table-mediator.cpp  table-reader.cpp
mylib/src/xml/setters/: address-setter.cpp  description-setter.cpp  offsets-setter.cpp  table-setter.cpp  variable-type-setter.cpp
source/: Config.cpp  Game.cpp  Trainer.cpp  main.cpp
src/: gg.cpp  main.cpp
temp/: CMakeLists.txt  coveralls.py  project.h  unit_tests.cpp
test/: CMakeLists.txt  test.cpp
test/dr/: another.cpp
tests/: CMakeLists.txt
tests/gt_os/: CMakeLists.txt  unit_tests.cpp
tests/gt_os/inc/fixtures/: keyboard-watcher.fixture.hpp  window-enumerator.fixture.hpp  window-finder.fixture.hpp  window-manager.fixture.hpp
tests/gt_os/inc/mocks/: os-api.mock.hpp  window-enumerator.mock.hpp  window-finder.mock.hpp
tests/gt_os/src/: keyboard-watcher.test.cpp  os-api.test.cpp  unit_tests.cpp  window-enumerator.test.cpp  window-finder.test.cpp  window-manager.test.cpp
tests/gt_xml/: CMakeLists.txt
tests/gt_xml/src/setters/: address-setter.test.cpp
tools/: find_lib.cmake
tools/testing/: configure.cmake  init.cmake
tools/version/: VersionResource.rc  generate_product_version.cmake
