set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_ROOT_DIR}/deps/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})

file(GLOB MY_LIBRARY_SOURCES "src/*.cpp")
add_library(${MY_LIBRARY_NAME} ${MY_LIBRARY_SOURCES})

target_include_directories(
        ${MY_LIBRARY_NAME} PRIVATE
        inc
)
