cmake_minimum_required(VERSION 2.8.8)

set(MY_TEST_NAME ${MY_PROJECT_NAME}-test)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_ROOT_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

set(MY_TEST_DIR ${PROJECT_ROOT_DIR}/test)

file(GLOB_RECURSE MY_TEST_SOURCES ${MY_TEST_DIR}/*.cpp)
add_executable(${MY_TEST_NAME} ${MY_TEST_SOURCES})

target_link_libraries(
        ${MY_TEST_NAME}
        PUBLIC gtest_main
)

add_test(
        NAME ${MY_TEST_NAME}
        COMMAND ${MY_TEST_NAME}
)
